[iOS] Do not handle key events that are key commands https://bugs.webkit.org/show_bug.cgi?id=191608 <rdar://problem/46046013>

Reviewed by Ryosuke Niwa.

Source/WebKit:

A key down event may be associated with a key command. If it is then we want to execute the
key command instead of inserting or deleting text. We need to ask UIKit to handle the current
event as a key command to find out.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _interpretKeyEvent:isCharEvent:]): Ask UIKit to handle the current event
as a key command. If it handles it then we're done. Otherwise, do what we do now.

Source/WebKitLegacy/ios:

Add default implementation of -handleKeyCommandForCurrentEvent that returns NO - the current
event was not handled as a key command.

* DefaultDelegates/WebDefaultUIKitDelegate.m:
(-[WebDefaultUIKitDelegate handleKeyCommandForCurrentEvent]):
* WebView/WebUIKitDelegate.h:

Source/WebKitLegacy/mac:

A key down event may be associated with a key command. If it is then we want to execute the
key command instead of inserting or deleting text. We need to ask UIKit to handle the current
event as a key command to find out.

* WebView/WebHTMLView.mm:
(-[WebHTMLView _handleEditingKeyEvent:]):

LayoutTests:

Add tests to ensure that we process key commands correctly.

* fast/events/ios/key-command-italic-dispatches-keydown-expected.txt: Added.
* fast/events/ios/key-command-italic-dispatches-keydown.html: Added.
* fast/events/ios/key-command-italic-expected.txt: Added.
* fast/events/ios/key-command-italic.html: Added.
* fast/events/ios/type-digits-holding-control-key-expected.txt: Added.
* fast/events/ios/type-digits-holding-control-key.html: Added.
* platform/ios-wk1/TestExpectations:

Canonical link: https://commits.webkit.org/206957@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238814 268f45cc-cd09-0410-ab3c-d52691b4dbfc